<resources>
    <string name="app_name">appFastFood</string>
    <string-array name="opciones">
        <item>Seleccione una opcion de vivienda</item>
        <item>Casa</item>
        <item>Departamento</item>
    </string-array>

    <string-array name="pago">
        <item>Selecciona una forma de pago</item>
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>PSE</item>
    </string-array>
    <string name="SelecFormaPago">Selecciona una forma de pago</string>

    <string name="menu_modooscuro">Modo Oscuro</string>
    <string name="menu_configuración">configuración</string>
    <string name="menu_cerrarsesion">Cerrar sesion</string>
    <string name="informacion">Introduzca la siguiente informacion</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="regresar">Boton para regresar</string>
    <string name="pago">Pago</string>
    <string name="celular">Ingresa el numero de celular</string>
    <string name="direccion">Direccion</string>
    <string name="vivienda">Vivienda</string>
    <string name="metodo_pago">Metodo de pago</string>
    <string name="valor_pagar">Valor a pagar</string>
    <string name="fecha_hora">Fecha y hora</string>
    <string name="devuelta_pago">Devuelta del pago</string>}
    <string name="numero_tarjeta">Numero de la Tarjeta</string>
    <string name="cvc">CVC</string>
    <string name="mes_año">(MM/YY)</string>
    <string name="realizar_pago">Realizar Pago</string>
    <string name="carro">Carrito</string>
    <string name="pagar">Pagar</string>
    <string name="nombreS">AppFastFood</string>
    <string name="imagen">Imagen de la aplicacion</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item6">Item 6</string>
    <string name="item7">Item 7</string>
    <string name="titulo1">Titulo 1</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
</resources>