<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/item1"/>
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/item2"/>
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/item3"/>
    </group>

    <item android:title="@string/titulo1">
        <menu>
            <item android:id="@+id/nav_item_six"
                android:icon="@drawable/abc_vector_test"
                android:title="@string/item6"/>
            <item android:id="@+id/nav_item_seven"
                android:icon="@drawable/abc_vector_test"
                android:title="@string/item7"/>
        </menu>
    </item>
</menu>